--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body,html{
-  background:url(https://3dwarehouse.sketchup.com/warehouse/v1.0/publiccontent/bbbf2a17-987c-4fe6-b190-ac8fe0e235e9) center no-repeat;
+  background:url(https://media.giphy.com/media/3otO6NFBIAFg2vPZuM/giphy.gif) center no-repeat;
   background-size:cover;
   min-height:100%;
   font-family: 'Brush Script MT', cursive;
